[feat] SearchHistoryService 예외 처리 로직 추가