@@ -1,5 +1,7 @@
 package com.dabojob.jobposting.service;
 
+import com.dabojob.global.exception.RedisServiceException;
+import java.util.Collections;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -31,80 +33,130 @@ public class SearchHistoryService {
 
     // 사용자 검색어 기록 저장
     public void addSearchHistory(String userId, String searchKeyword) {
-        if (searchKeyword == null || searchKeyword.trim().isEmpty()) {
-            return;
+        try {
+            if (searchKeyword == null || searchKeyword.trim().isEmpty()) {
+                log.debug("Empty search keyword provided for user {}", userId);
+                return;
+            }
+
+            String trimmedKeyword = searchKeyword.trim();
+            String userHistoryKey = String.format(USER_SEARCH_HISTORY_KEY, userId);
+
+            // 현재 시간을 점수로 사용 (최신 검색어가 높은 점수)
+            double score = System.currentTimeMillis();
+
+            // 개인 검색어 기록 저장 (Sorted Set - 시간순 정렬)
+            stringRedisTemplate.opsForZSet().add(userHistoryKey, trimmedKeyword, score);
+
+            // 개인 검색어 기록 개수 제한 (오래된 것부터 삭제)
+            Long count = stringRedisTemplate.opsForZSet().count(userHistoryKey, Double.NEGATIVE_INFINITY, Double.POSITIVE_INFINITY);
+            if (count != null && count > MAX_USER_SEARCH_HISTORY) {
+                long removeCount = count - MAX_USER_SEARCH_HISTORY;
+                stringRedisTemplate.opsForZSet().removeRange(userHistoryKey, 0, removeCount - 1);
+            }
+
+            // TTL 설정
+            stringRedisTemplate.expire(userHistoryKey, USER_HISTORY_TTL);
+
+            // 전체 인기 검색어 집계 (검색 빈도로 점수 증가)
+            stringRedisTemplate.opsForZSet().incrementScore(POPULAR_SEARCHES_KEY, trimmedKeyword, 1.0);
+            stringRedisTemplate.expire(POPULAR_SEARCHES_KEY, POPULAR_SEARCHES_TTL);
+
+            log.info("Added search history for user {}: {}", userId, trimmedKeyword);
+
+        } catch (Exception e) {
+            log.error("Failed to add search history for user {} with keyword '{}'", userId, searchKeyword, e);
+            // 예외 던지지 않음 - 검색 기능 자체는 계속 작동
         }
-
-        String trimmedKeyword = searchKeyword.trim();
-        String userHistoryKey = String.format(USER_SEARCH_HISTORY_KEY, userId);
-
-        // 현재 시간을 점수로 사용 (최신 검색어가 높은 점수)
-        double score = System.currentTimeMillis();
-
-        // 개인 검색어 기록 저장 (Sorted Set - 시간순 정렬)
-        stringRedisTemplate.opsForZSet().add(userHistoryKey, trimmedKeyword, score);
-
-        // 개인 검색어 기록 개수 제한 (오래된 것부터 삭제)
-        Long count = stringRedisTemplate.opsForZSet().count(userHistoryKey, Double.NEGATIVE_INFINITY, Double.POSITIVE_INFINITY);
-        if (count != null && count > MAX_USER_SEARCH_HISTORY) {
-            long removeCount = count - MAX_USER_SEARCH_HISTORY;
-            stringRedisTemplate.opsForZSet().removeRange(userHistoryKey, 0, removeCount - 1);
-        }
-
-        // TTL 설정
-        stringRedisTemplate.expire(userHistoryKey, USER_HISTORY_TTL);
-
-        // 전체 인기 검색어 집계 (검색 빈도로 점수 증가)
-        stringRedisTemplate.opsForZSet().incrementScore(POPULAR_SEARCHES_KEY, trimmedKeyword, 1.0);
-        stringRedisTemplate.expire(POPULAR_SEARCHES_KEY, POPULAR_SEARCHES_TTL);
-
-        log.debug("Added search history for user {}: {}", userId, trimmedKeyword);
     }
 
     // 사용자의 최근 검색어 조회
     public List<String> getUserRecentSearches(String userId, int limit) {
-        String userHistoryKey = String.format(USER_SEARCH_HISTORY_KEY, userId);
+        try {
+            if (limit <= 0) {
+                throw new IllegalArgumentException("Limit must be positive");
+            }
 
-        // 점수가 높은 순으로 조회 (최신순)
-        Set<String> searches = stringRedisTemplate.opsForZSet().reverseRange(userHistoryKey, 0, limit - 1);
+            String userHistoryKey = String.format(USER_SEARCH_HISTORY_KEY, userId);
 
-        return searches != null ? List.copyOf(searches) : List.of();
+            // 점수가 높은 순으로 조회 (최신순)
+            Set<String> searches = stringRedisTemplate.opsForZSet().reverseRange(userHistoryKey, 0, limit - 1);
+
+            return  searches != null ? List.copyOf(searches) : Collections.emptyList();
+
+        } catch (IllegalArgumentException e) {
+            throw e; // 파라미터 검증 예외는 그대로 전파
+        } catch (Exception e) {
+            log.error("Failed to get recent searches for user {} with limit {}", userId, limit, e);
+            throw new RedisServiceException("Failed to retrieve recent search history", e);
+        }
     }
 
     //전체 인기 검색어 조회
     public List<String> getPopularSearches(int limit) {
-        // 점수가 높은 순으로 조회 (인기순)
-        Set<String> searches = stringRedisTemplate.opsForZSet().reverseRange(POPULAR_SEARCHES_KEY, 0, limit - 1);
+        try {
+            if (limit <= 0) {
+                throw new IllegalArgumentException("Limit must be positive");
+            }
 
-        return searches != null ? List.copyOf(searches) : List.of();
+            // 점수가 높은 순으로 조회 (인기순)
+            Set<String> searches = stringRedisTemplate.opsForZSet().reverseRange(POPULAR_SEARCHES_KEY, 0, limit - 1);
+
+            return searches != null ? List.copyOf(searches) : Collections.emptyList();
+
+        } catch (IllegalArgumentException e) {
+            throw e; // 파라미터 검증 예외는 그대로 전파
+        } catch (Exception e) {
+            log.error("Failed to get popular searches with limit {}", limit, e);
+            throw new RedisServiceException("Failed to retrieve popular searches", e);
+        }
     }
 
     // 사용자의 특정 검색어 삭제
     public void removeUserSearchHistory(String userId, String searchKeyword) {
-        String userHistoryKey = String.format(USER_SEARCH_HISTORY_KEY, userId);
+        try {
+            if (searchKeyword == null || searchKeyword.trim().isEmpty()) {
+                throw new IllegalArgumentException("Search keyword cannot be empty");
+            }
 
-        Long removed = stringRedisTemplate.opsForZSet().remove(userHistoryKey, searchKeyword);
+            String userHistoryKey = String.format(USER_SEARCH_HISTORY_KEY, userId);
 
-        if (removed != null && removed > 0) {
-            log.debug("Removed search history for user {}: {}", userId, searchKeyword);
+            Long removed = stringRedisTemplate.opsForZSet().remove(userHistoryKey, searchKeyword.trim());
+
+            if (removed != null && removed > 0) {
+                log.debug("Removed search history for user {}: {}", userId, searchKeyword);
+            } else {
+                log.debug("No search history found to remove for user {}: {}", userId, searchKeyword);
+            }
+
+        } catch (IllegalArgumentException e) {
+            throw e; // 파라미터 검증 예외는 그대로 전파
+        } catch (Exception e) {
+            log.error("Failed to remove search history for user {} with keyword '{}'", userId, searchKeyword, e);
+            throw new RedisServiceException("Failed to remove search history", e);
         }
     }
 
     // 사용자의 모든 검색어 기록 삭제
     public void clearUserSearchHistory(String userId) {
-        String userHistoryKey = String.format(USER_SEARCH_HISTORY_KEY, userId);
+        try {
+            String userHistoryKey = String.format(USER_SEARCH_HISTORY_KEY, userId);
 
-        Boolean deleted = stringRedisTemplate.delete(userHistoryKey);
+            Boolean deleted = stringRedisTemplate.delete(userHistoryKey);
 
-        if (deleted) {
-            log.info("Cleared all search history for user {}", userId);
+            if (deleted) {
+                log.debug("Cleared all search history for user {}", userId);
+            } else {
+                log.debug("No search history found to clear for user {}", userId);
+            }
+
+        } catch (Exception e) {
+            log.error("Failed to clear search history for user {}", userId, e);
+            throw new RedisServiceException("Failed to clear search history", e);
         }
     }
 
-    // 특정 검색어의 검색 빈도 조회
-    public Double getSearchFrequency(String searchKeyword) {
-        return stringRedisTemplate.opsForZSet().score(POPULAR_SEARCHES_KEY, searchKeyword);
-    }
+
 
 
 }
